--- a/index.html
+++ b/index.html
@@ -15,7 +15,21 @@
       <p>Work</p>
       <p>Team</p>
       <p>Contact</p>
-
     </div>
+
+    <!-- MainContent -->
+    <h2>Our Process</h2>
+
+    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/identify.svg" alt="Identify">
+    <h3>Identify</h3>
+    <p class="main">We focus on the most important details.</p>
+
+    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/understand.svg" alt="Understand">
+    <h3>Understand</h3>
+    <p class="main">We study our projects inside and out.</p>
+
+    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/execute.svg" alt="Execute">
+    <h3>Execute</h3>
+    <p class="main">We put everything we have into our work.</p>
   </body>
 </html>
