--- a/index.html
+++ b/index.html
@@ -31,5 +31,17 @@
     <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/execute.svg" alt="Execute">
     <h3>Execute</h3>
     <p class="main">We put everything we have into our work.</p>
+
+    <!-- Lower Segment -->
+    <h4>Designed In New York</h4>
+    <h3>Portfolio</h3>
+    <p class="main">Coming Soon</p>
+    <h3>Team</h3>
+    <p class="main">We're Hiring!</p>
+    <h3>Contact</h3>
+    <p class="main">Phone: (555)-555-5555 <br>
+      Email: Test@example.com <br>
+      Twitter: @test</p>
+
   </body>
 </html>
