--- a/index.html
+++ b/index.html
@@ -43,5 +43,10 @@
       Email: Test@example.com <br>
       Twitter: @test</p>
 
+      <!-- Contact -->
+      <div class="contact">
+        <p class="copyright">(c)Broadway 2016</p><p>Home About Work Team Contact</p>
+      </div>
+
   </body>
 </html>
